RESOLVED FIXED246978
Release assert while scrolling subframes under reentrant calls to updateAppearanceAfterLayout()
https://bugs.webkit.org/show_bug.cgi?id=246978
Summary Release assert while scrolling subframes under reentrant calls to updateAppea...
Wenson Hsieh
Reported 2022-10-24 17:41:40 PDT
Attachments
Wenson Hsieh
Comment 1 2022-10-24 19:21:04 PDT
EWS
Comment 2 2022-10-25 20:29:58 PDT
Committed 255998@main (dd872d60f501): <https://commits.webkit.org/255998@main> Reviewed commits have been landed. Closing PR #5728 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.